﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.33) stable; urgency=low

  * osconf: new config opsi-script.global.w10BitlockerSuspendOnReboot
  * osconf: new global config variable: w10BitlockerSuspendOnReboot (default= false)
  * osmain: buildPC: >=win 10 and  w10BitlockerSuspendOnReboot and (txrImmediateReboot or txrImmediateReboot)
     then suspend bitlocker for 1 reboot     fixes: #3816
  * new units oswmi, utilwmi
  * osparser: producestringlist:
    new function getListFromWMI(<wmi class str>,<property list>,<condition str>) : stringlist
    example: set $plist$ = createStringList ('Model','Vendor')
             set $list$ = getListFromWMI('Win32_ComputerSystem',$plist$,'where model like 'Esprimo%')
    if <property list> is empty all properties of <wmi class str> will be returned
    on error a empty list will be returned

-- Detlef Oertel <d.oertel@uib.de>  Mon, 17 12 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.32) stable; urgency=low

  * osconf: no more OpsiServiceConfigs: in log

-- Detlef Oertel <d.oertel@uib.de>  Thu, 25 10 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.31) stable; urgency=low

  * new paths for Linux:
     osconf: opsiscriptconfinit = '/etc/opsi-script/opsi-script.conf';
     osbatchgui: skindirectoryDefault = '/usr/share/opsi-script/skin';
     osbatchgui: skindirectoryCustomWin = '/usr/share/opsi-script/customskin';
     osparser: // search in /usr/share/opsi-script/lib
     osparser: '%opsiLogDir%' = '/var/log/opsi-script'
     oslog: StandardLogPath := '/var/log/opsi-script/';
  * osencoding: do not write out supported encodings; fixes #3700

-- Detlef Oertel <d.oertel@uib.de>  Wed, 17 10 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.30) stable; urgency=low

  * osparser: fix for close log file after script finished: